# check-shape

./: LICENSE  README.md  setup.cfg  setup.py
src/: check_shape.py
