[metadata]
name = check-shape
version = 0.2
author = Stratis Markou
author_email = stratismar@gmail.com
description = A shape checking tool for arrays and tensors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stratisMarkou/check-shape
project_urls =
    Bug Tracker = https://github.com/stratisMarkou/check-shape/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
